# hiv-splicing

./: .gitignore  2023_06_RNAseq_sort_NL4-3_CommonKmerNested.rb  Cargo.toml  NL4-3_SplicingAssyProtocol.docx  README.md  SlurmScripts.txt  docker-compose.yml  ~$4-3_SplicingAssyProtocol.docx
_history/: 2024_01_CatagorySortRR_NL4-3_Cryptics.rb  NL4-3_Primers.xlsx  README.md  SeparateRandomReversePlusCommonKmerDeG_NL4_3.rb  SlurmScripts.txt
src/: check_processing_metrics.rs  main.rs  results.csv  splice.rs
